@@ -14,6 +14,10 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+20 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-22)
+-----------------------------------------------------------------
+- G4LMsdGenerator - fixed memory leak (V.Grichine)
+
 19 November 2014 - V.Ivanchenko (hadr-cohe-V10-00-21)
 -----------------------------------------------------------------
 - G4LMsdGenerator - fixed shortlived decays (V.Grichine)
